--- a/obrienc/index.html
+++ b/obrienc/index.html
@@ -98,7 +98,78 @@
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
+         <article>
+            <header class="article-header">
+               <h1>Module 1.2 Blog Post</h1>
+            </header>
+            <h2>Introduction</h2>
+                  <p>Have you ever wondered how apps, software, or even automated checkout systems come to life? These are all results of carefully planned system development processes. We interact with many systems every day in nature, in our homes, in our places of work and in retail stores. Systems are used in many different contexts. So, a system is an interconnecting network of parts that work together thereby creating a larger whole of a complex thing (Das et al., 2022).
+                     From your favorite food delivery app to the checkout kiosk at your local grocery store—every digital tool we rely on is part of a broader system. But what does it really mean to develop a system? To understand how these systems are designed, maintained, and evolve over time, we turn to the Systems Development Life Cycle (SDLC). </p>
+            <h2>Systems Development Lifecycle</h2>
+                  <p>The systems development lifecycle is a fundamental process that models how each system behaves throughout various stages. A system is conceived, developed, used, maintained, and eventually retired. The Lifecycle has six stages:</p>   
+            <dl>
+               <dt>Conception:</dt>
+               <dd>
+                  What the system needs to do, based on stakeholders needs. Stakeholder input is gathered to define the system’s goals, requirements, and desired outcomes. This is where the "why" of the system is established, often through interviews, surveys, and problem analysis. 
+               </dd>
+               <dt>Development:</dt>
+               <dd>
+                  Teams brainstorm, model, and prototype possible solutions, often comparing different technologies or approaches. This stage may involve feasibility studies and early technical design.
+               </dd>
+               <dt>Production:</dt>
+               <dd>
+                  Building and testing the actual system for usability. Developers write the code or build the physical components, and QA teams test for functionality, usability, and reliability. 
+               </dd>
+               <dt>Utilization:</dt>
+               <dd>
+                  Actively working with the system in a real-world environment. Feedback from real usage is collected, and the system’s performance is monitored to ensure it meets user needs and operational goals.
+               </dd>
+               <dt>Support:</dt>
+               <dd>
+                  Keeping the system running smoothly. Maintenance and troubleshooting happen simultaneously with utilization.
+               </dd>
+               <dt>Retirement:</dt>
+               <dd>
+                  The system is decommissioned and safely disposed of. This stage includes transferring data if necessary and disposing of or archiving components responsibly. Retirement may also involve transitioning users to a new system.
+                  </dd>
+            </dl>
+            <p>These stages provide a flexible yet structured path to guide system evolution. Not every system follows the same steps in the same order—some stages may overlap, repeat, or be skipped depending on the project’s size and complexity (Holt, 2021). </p>
+            <h2>Life Cycle Models</h2>
+                  <p>While a life cycle is a structural concept, a life cycle model is described by Holt as “a behavioral construct that describes the execution of a Life Cycle, specifically the order of execution of the stages” (Holt, 2021). Depending on the project, there are a few well established Life Cycle Models that may be used and are described next, with their advantages and possible shortcomings.</p>
 
+               <h3>Linear</h3>
+            <p>In a linear model each stage happens right after the next, with a cascading effect. Because of the specific sequence of this model, it is best used for projects where the needs, products and technology involved are not likely to change much. With little variation in the processes in each stage, it is used primarily for well-defined projects with straightforward requirements and tight constraints, such as simple applications with critical, non-negotiable functions. One advantage of Linear models is they are easy to understand and a clear process application. The system is not beneficial for large complex systems where the needs tend to change often. Linear life cycle models are typically not used for systems engineering (Holt, 2021). </p>
+               <h3>Iterative</h3>
+            <p>The iterative model uses several passes through the stages, or iterations, which break down large complex projects into smaller ones. Think of it as creating a sculpture, the main need is defined then refined through feedback and testing. Each iteration, or pass is a mini life cycle. Because each iteration goes through each stage, they are each workable versions of the final system. This system is beneficial because iterations are shorter and having more versions means more opportunities for improvement. Also, with multiple versions it is easier to restore and find bottlenecks or errors. Iterative systems can produce new versions relatively quickly, an advantage in the software industry. A common example of the iterative model is Agile development, where each sprint produces a working version of the software that incorporates user feedback. According to Jon Holt in Systems Engineering Demystified, “one of the disadvantages of applying an iterative approach to Systems Projects is that the basic needs may be changed quite frequently by Stakeholders, so it is important to have a good, robust needs Process in place, which is often not the case” (Holt, 2021). Iterative models allow space for learning from feedback and evolving understanding of needs. </p>
+               <h3>Incremental</h3>
+            <p>Incremental and iterative models are sometimes called evolutionary Life Cycle Models because of the multiple passes and releases. In the incremental system, the main focus is adding functionality in smaller increments. This approach allows the project to be built and delivered part by part. The incremental model is like building a house room by room, finishing one before moving on to the next. This method is ideal in complex projects where functionality is needed before the whole project is completed. However not all systems can be worked on or broken down into chunks. For example, some security systems require all components to function together from the beginning, making it harder to implement incrementally (Holt, 2021).</p>
+            <h2>Reflection on Systems Thinking </h2> 
+                  <p>By viewing development through the lens of systems thinking, we not only build smarter software, but we also build smarter teams, better user experiences, and more adaptable organizations. The Software Development lifecycle that I mentioned earlier is a great example of how systems thinking is utilized in a real-world scenario. It turns an idea into reality and at the end, enables the user to enjoy the intent and presence of an application/product. Although the primary purpose of software development is to serve its users a usable experience, why do so many applications fail to meet customer satisfaction levels? Systems thinking helps us find the reasons and possible routes to better outcomes. </p>
+               <h3>Continuous Testing</h3>
+            <p>As we saw in the explanations of the three systems lifecycle models, each phase is essential and breaking work into manageable stages like development, testing, and production promotes organized development. The life cycle helps ensure that user needs and goals are clearly defined from the start, and systems thinking includes checks and feedback loops that help catch issues early and improve quality. Thinking ahead through the entire life cycle avoids short-term fixes that create long-term problems.  
+
+               In an example from Systems Thinking, a process for problem solving the author states “It is also necessary to take care how well the flow operates through the system. Doing so enables the teams to remove constraints or bottlenecks in the systems by making them visible with the help of measuring the queue time. Let us take an example, by measuring rate of test case execution or test coverage we can say manual testing would be an obvious constraint in testing phase which will lead to delay in production. The solution could be implementing Continuous Testing that facilitates automated testing, allowing test team to reduce the cycle time in Testing phase” (Das et al., 2022). </p>
+               <h3>Adapting to Change</h3> 
+            <p>In an IT project lifecycle, user needs increase or change, new technologies and regulations emerge, and systems rarely stay static. A life cycle mindset encourages continuous evaluation and improvement, making it easier to evolve the system without starting over. We saw in the iterative model how useful this method can be for the ever-changing nature of digital systems which must stay relevant, secure, and effective over time. In the workplace, systems thinking also plays a role in productivity and collaboration among teams and projects.</p>   
+               <h3>Sustainability</h3>
+            <p>The goal should always be envisioning the future and bringing it into being, no matter the complexity of the system, model or framework applied. Sustainable IT practice has emerged as a crucial enabler of environmental stewardship and responsible business practices. A study by Seegrün 2023 and others looks at the development of “Digital Twins, virtual replicas of a product or product-service system, which can be used to provide transparency of a product’s sustainability and to positively influence the ecological impact throughout its lifecycle by means of intelligent data analytics” (Seegrün et al., 2023). For example, in smart manufacturing, a digital twin of a factory floor allows engineers to test energy-saving configurations before applying them in real life, reducing both cost and environmental impact. This unique innovation allows us to simulate and optimize real world scenarios without the cost and waste of physical trial and error. The production and use of digital twins enhance the sustainability of digital systems by enabling smarter design, reducing waste, improving efficiency, and supporting long-term, adaptable solutions. Companies must prepare to take on more responsibility for their products' entire lifecycle, and DTs can increasingly support this responsibility.</p>
+            <h2>Final Thought </h2>
+                  <p>Understanding the systems' development life cycle and choosing the right model gives us the tools to build better, smarter, and more sustainable digital systems. With the right model and mindset, we can: </p>
+                  <ul>
+                     <li>Build more user-focused solutions</li>
+                     <li>Respond faster to change</li>
+                     <li>Design with sustainability in mind</li>
+                  </ul> 
+            <p>Whether it's through continuous testing, iterative feedback, or innovative tools like digital twins, systems thinking helps us meet the needs of today while preparing for the challenges of tomorrow. </p> 
+            
+            <footer class="article-footer">
+               <h3>Sources:</h3>
+               <p>Source 1</p>
+               <p>Das, D., Technologies, C., & Company), A. C. (A C. (2022, August 1). Systems thinking - a process for problem solving in SDLC. Blog by Cigniti Technologies. https://www.cigniti.com/blog/systems-thinking-a-process-for-problem-solving-in-sdlc/#:~:text=WHAT%20IS%20SYSTEMS%20THINKING?,process%20for%20problem%20solving%20rises. </p>
+               <p>Source 2</p>
+               <p>Holt, J. (2021). Systems engineering demystified Jon Holt. Packt Publishing. </p>
+               <P>Source 3</P>
+               <p>Seegrün, A., Kruschke, T., Mügge, J., Hardinghaus, L., Knauf, T., Riedelsheimer, T., & Lindow, K. (2023). Sustainable product lifecycle management with Digital Twins: A Systematic Literature Review. Procedia CIRP, 119, 776–781. https://doi.org/10.1016/j.procir.2023.03.124 </p>
          <!-- Module 2.1 Blog Post Starts here -->
 
          <!-- Module 2.2 Blog Post Starts here -->
