--- a/fayyaza/index.html
+++ b/fayyaza/index.html
@@ -15,28 +15,63 @@
       <main>
          <!-- Module 1.1 Blog Post Starts Here-->
          <article>
-            <header class="article-header">
-               <h2>Module 1.1 Blog Post</h2>
-            </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <h2>Module 1.1 Blog Post: Model-Based Systems Thinking in Digital Environments</h2>
+  
+    <h3>Introduction</h3>
+    <p>The digital landscape is no longer simple. From cloud infrastructure and microservices to artificial intelligence and user experience design, modern digital systems are composed of layers of interconnected components. These components are dynamic and evolve rapidly. Yet despite this complexity, many organizations still rely on outdated, linear models of thinking when attempting to design or solve problems within these systems. These traditional approaches are often reductionist, focusing on parts in isolation and missing the interdependencies that define real-world behavior.</p>
+  
+    <p>Systems thinking presents an alternative—a more adaptive and holistic method for understanding and managing complexity. This approach emphasizes how the parts of a system interact, rather than simply analyzing them individually. Even more powerful is model-based systems thinking, which uses structured models—visual, conceptual, or computational—to explore, simulate, and improve system behavior over time. In digital environments where outcomes are often nonlinear, unpredictable, and interdependent, model-based systems thinking offers designers, engineers, and strategists a toolkit to develop more robust, responsive, and human-centered solutions.</p>
+  
+    <h3>Understanding Systems Thinking</h3>
+    <p>At its core, systems thinking is about seeing the whole picture. Rather than breaking things into parts and examining each in isolation, systems thinking focuses on the relationships between components and the emergent behavior that arises from their interaction. As Donella Meadows (2008) explained in <em>Thinking in Systems</em>, "A system is more than the sum of its parts; it is the product of their interactions."</p>
+  
+    <p>Systems thinking originated in the mid-20th century and has since influenced disciplines such as ecology, organizational behavior, education, engineering, and information systems. The key principles include interconnectedness, feedback loops, emergence, delay and nonlinearity, and understanding boundaries and perspectives. These principles help practitioners address root causes and long-term consequences rather than symptoms.</p>
+  
+    <h3>The Pitfalls of Linear Thinking in Digital Design</h3>
+    <p>Traditional linear thinking assumes problems are best addressed step-by-step. However, digital systems involve many interrelated parts. A change in one component can impact many others. Linear thinking can lead to oversights, such as fixing a UI element without considering how it affects server load or user behavior. In contrast, systems thinking encourages considering all interacting parts, long-term feedback, and user experience holistically.</p>
+  
+    <h3>The Value of Models in Systems Thinking</h3>
+    <p>Model-based systems thinking translates abstract systems concepts into concrete visualizations or simulations. These models enable communication among teams, allow scenario testing, and support learning. Models do not need to be perfect, only useful and iterative. They provide structure to complex decisions, help identify feedback loops, and clarify assumptions.</p>
+  
+    <h3>Model-Based Thinking in Action: A UX Perspective</h3>
+    <p>Jeff Johnson (2020) connects system design and cognitive psychology. Mental models—internal maps users form—must align with interface logic. External models, such as mockups or diagrams, bridge the gap between system functionality and user understanding. For example, wireframes in app design model how users interact with systems and how features meet user expectations.</p>
+  
+    <h3>Real-World Case Study: Smart Cities</h3>
+    <p>Smart cities integrate infrastructure, user behavior, and data. A city bike-sharing system is not just hardware and software; it involves data modeling, maintenance cycles, real-time analytics, and feedback systems. Cities like Amsterdam and Singapore use digital twins to simulate urban environments, reflecting true model-based systems thinking in action.</p>
+  
+    <h3>The Role of Feedback Loops and Delays</h3>
+    <p>Feedback loops and delays are essential features in systems thinking. Reinforcing loops amplify behavior, while balancing loops stabilize systems. Delays can mask cause-effect relationships. Ignoring these dynamics can lead to poor design decisions. Models help make these invisible mechanisms visible.</p>
+  
+    <h3>Organizational Systems and Team Collaboration</h3>
+    <p>Systems thinking applies to human systems too. In software teams, roles, feedback, and communication patterns create a system. Agile, CI/CD, and retrospectives are ways to improve not just what is built, but how it’s built. Models can reflect workflows, improve efficiency, and reduce miscommunication.</p>
+  
+    <h3>Critical Reflection and Limitations</h3>
+    <p>Model-based systems thinking is powerful but not perfect. Models rely on assumptions, and poor inputs can lead to poor outputs. They are simplifications—not reality. Organizational culture, siloed thinking, and lack of training can also limit their effectiveness. Ethical considerations must be integrated to ensure models align with values, not just efficiency.</p>
+  
+    <h3>Ethical and Human-Centered Design</h3>
+    <p>Systems thinking supports ethical reflection. For instance, platform design must consider misinformation, addiction, and user data security. Human-centered models help ensure systems support user well-being. Jeff Johnson (2020) emphasizes designing interfaces that support cognitive usability, which scales to broader systems design.</p>
+  
+    <h3>Recommendations for Practice</h3>
+    <ul>
+      <li>Map your systems early using tools like causal loop diagrams or user journeys.</li>
+      <li>Model only what matters—focus on high-leverage points.</li>
+      <li>Use iterative prototyping aligned with user mental models.</li>
+      <li>Include diverse perspectives in modeling and system discussions.</li>
+      <li>Validate models regularly and revise based on outcomes.</li>
+    </ul>
+  
+    <h3>Conclusion</h3>
+    <p>Model-based systems thinking provides a lens and toolkit for engaging with complex digital systems. It allows for better understanding, communication, decision-making, and design. It emphasizes sustainability, feedback, and inclusivity in a way that traditional thinking cannot. As systems grow in complexity and influence, adopting a systems mindset will be essential for designers, developers, and leaders alike.</p>
+ 
             <footer class="article-footer">
-                <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
+               <p>Sources:</p>
+               <ul>
+                 <li>Johnson, J. (2020). <em>Designing with the mind in mind: Simple guide to understanding user interface design guidelines</em> (3rd ed.). Morgan Kaufmann.</li>
+                 <li>Meadows, D. H. (2008). <em>Thinking in systems: A primer</em>. Chelsea Green Publishing.</li>
+                 <li>Sterman, J. D. (2000). <em>Business dynamics: Systems thinking and modeling for a complex world</em>. Irwin/McGraw-Hill.</li>
+                 <li>Senge, P. M. (1990). <em>The fifth discipline: The art and practice of the learning organization</em>. Doubleday.</li>
+                 <li>Kim, D. H. (1999). <em>Introduction to systems thinking</em>. Pegasus Communications.</li>
+               </ul>
             </footer>
          </article>
 
