--- a/odumt/index.html
+++ b/odumt/index.html
@@ -57,7 +57,99 @@ The main components of MBSE is the systems architecture model also known as SAM.
             </footer>
          </article>
 
-         <!-- Module 1.2 Blog Post Starts here -->
+         <!-- Module 1.2 Blog Post Starts here →
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="css/styles.css" rel="stylesheet">
+      <title>Tobe Odum | Portfolio</title>
+   </head>
+   <body>
+<!-- Page Header  -->
+      <header class="page-header">
+         <h1>Portfolio</h1>
+      </header>
+<!-- Main Content Area  -->
+      <main>
+
+         <article>
+            <header class="article-header">
+               <h2>Module 1.1 Blog Post</h2>
+            </header>
+            <h3>Model Based Systems Engineering & User Experience</h3>
+            <p>Now that the reader is already familiar with Model-based Systems Engineering which is the practice of developing a set of related models which help, design,simulate, and document a system that's under development, it is important to be aware of how Model-Based Systems Engineering ties into user experience. The application of modeling systems in a cost-effective way in order to explore and document system characteristics is a colossal part of MBSE. When testing and validating the characteristics of a system early, models can facilitate timely learning of both behaviors and properties. This in turn enables fast feedback on design and requirements decisions. This plays a role into how the user of the developed model ends up experiencing the model. Models provide an effective way to update, explore, and communicate aspects of a system to stakeholders while simultaneously reducing and eliminating dependence on traditional documents significantly. It should be noted that historically Model-Based Systems Engineering has been laser focused on recording and expressing design, analysis, requirements and verification information. As modeling technology continues to mature, it has provided people with increased value by providing users with accelerated learning. This can provide better insights into the physical world (Skaled Agile, Inc., n.d.). This is necessary for evolving live systems and enabling enterprise solution delivery. Enterprise solution delivery is defined as a large solution integration and delivery which describes practices that are required to apply safe principles and practices to the operation, development, specification, and evolution of the worlds biggest and most sophisticated software applications, networks, and cyber-physical systems. (Skaled Agile, Inc., n.d.) Model-Based Systems Engineering (MBSE) and User Experience (UX) design, while the two are traditionally known and viewed as separate disciplines, are increasingly interconnected in the development of complex systems, specifically as the main focus on human-centered design becomes more important to systems thinking. Model-Based Systems Engineering is a formalized methodology that uses models to support the requirements such as, analysis, design, verification, and validation activities throughout the development lifecycle of a system. This shifts the main emphasis from document-based engineering to a model-centric approach. This allows for improved integration, visualization,  and the traceability of complex system components and their interactions. When User Experience design is brought into the fold of Model-Based Systems Engineering, the user can become a central component of the system model. As opposed to being just an afterthought that is addressed during the interface design phase. This integration will ensure that the system’s functionality aligns closely with needs, human behaviors, and limitations from the very start of the design process.	
+The influence of psychology in UX, which was spearheaded by influential figures such as Donald Norman and Jane Fulton Suri, plays a crucial role in the integration process. Norman’s foundational perspective on user experience emphasizes the importance of a system being useful, intuitive, and delightful for its users. When applying this within an MBSE framework, this principle leads to systems that are not only technically large but also practically usable. For example, early modeling within Model-Based Systems Engineering is able to incorporate user task flows, cognitive load considerations, and emotional responses, this ensures that the human-machine interface is not only operable but most importantly. optimal. User Experience inputs can guide the architecture of a system by defining human-centric requirements that are able to be traced throughout the system model, this can influence everything from interface design to safety protocols. This approach is especially vital in high-stakes domains like aerospace, defense, and healthcare, this is where human error resulting from poor UX design can have catastrophic consequences.	
+Jane Fulton Suri’s human-centered design methodology—anchored in empathy, observation, and cross-functional collaboration—also complements MBSE by encouraging engineers to go beyond technical specifications. Her approach advocates for deeply understanding users in their natural environments, an insight that can be embedded into system models to reflect real-world contexts. Additionally, ethnographic research findings can shape model parameters and behavioral simulations, this ensures that user scenarios and edge cases are considered early in the design. Furthermore, this reduces the need for costly redesigns late in development and improves overall system performance and adoption.
+By incorporating User Experience into Model-Based Systems Engineering, this also promotes a more agile development process. As models evolve, models can be continuously validated against User Experience criteria, which allows for rapid feedback and refinement. This dynamic of feedback-driven development cycle is essential for building systems that truly serve users' wants and needs in ever-changing operational environments. With that being said MBSE and UX design are not competing paradigms but rather complementary approaches that, when combined, offer a more holistic and user-aligned system development process. As systems continue to grow in complexity. The interface between human and machine becomes more critical, the collaboration between MBSE and UX which is rooted in the principles of psychology, design thinking, and engineering will define the next generation of systems that are not only efficient but deeply human-centric (Yablonski, 2024).
+</p>
+            <h3>Systems Development Life Cycle Insights</h3>
+            <p>​The Systems Development Life Cycle also known as SDLC is a structured approach that's used in software engineering to design, test, develop, and maintain software systems. This planned approach provides a systematic process for building software that ensures quality and accuracy. The Systems Design Life Cycle goes through several phases which include feasibility analysis, planning, development, design, testing, deployment, and maintenance. Every single phase phase has specific deliverables and is meant to ensure that the software meets the desired requirements and functions properly (Wikipedia,2024)
+A few commonly used Systems Development Life Cycle models are iterative, linear, and incremental. This offers different methodologies that’re suited for various project needs depending on the situation. The linear model, which is also known as the Waterfall model, follows a strict and precise sequence of phases where each must be completed before the next part of the process can commence. Due to its simplicity and structured nature it is easier to manage,control, and document than other processes. This model is most effective when project requirements are stable and well thought out from the beginning (Wikipedia, 2024). However, a significant drawback is the lack of flexibility once development starts, accommodating changes becomes difficult. Nonetheless, testing occurs deep into the process, this often leads to late-stage discovery of defects. This in turn increases the cost and complexity of fixing issues (Wikipedia, 2024).
+With that being said, the iterative model involves developing the system through repeated cycles also known as iterations. This allows for refinement with each cycle. Every single iteration passes through phases such as design, development, planning, and testing. This leads to the promotion of early problem detection and incremental improvement (Ellow.io, 2023). The iteration model supports adaptability and is exceedingly useful when requirements are not fully known. This promotes constant feedback and improvement. Although, the iterative model is able to result in increased project complexity due to overlapping cycles and risks scope creep if these challengers are not properly managed (Ellow.io, 2023).
+The incremental model breaks the project into miniature modules or components that are tested, developed, and delivered in different increments. Every single increment builds off one another which results in added functionality to the system that can be delivered independently. This will allow users to access part of the system early (Guru99, 2023). This early delivery of features is beneficial for user feedback and early revenue generation. Although it should be noted that it requires precise planning and integration to confirm that the future modules align with previously delivered components. Additionally, initial architecture must be well rounded to accommodate for ongoing possible future integration (Guru99, 2023).
+Thinking in terms of a system’s life cycle is essential for effective system design, as well as sustainability and long-term evolution. The Systems Design Life Cycle offers a well defined plan that grants structure and clarity. Which results in the support of consistent project execution and goal alignment (Guru99, 2023). Looking from a sustainability perspective, practices such as thorough documentation, regular testing, and scheduled maintenance enable the system to be updated and remain functional over time. It's important that digital systems must evolve to meet new user needs and technological advances, an SDLC helps integrate change systematically, ensuring stability during transitions (Ellow.io, 2023).
+Nonetheless, using iterative and incremental models supports constant development and refinement, this allows for systems to evolve in response to real-world feedback and changing requirements. In a world that has rapidly changing technological environments, this adaptability is completely necessary.. Without an SDLC approach, teams may struggle with confusing objectives, limited scalability, misaligned timelines, and poor quality control,(Wikipedia, 2024).
+
+
+</p>
+            <h3>SLDC Summarized</h3>
+            <p>The Systems Device Life Cycle is a fundamental framework within software development that guides the planning, maintenance, creation, and future retirement of different digital systems. Systems Device Life Cycle provides structured stages that help development teams manage complexity, reduce risk possibility, and enhance project planning. By thoroughly selecting the proper life cycle model. Whether its iterative, linear, or incremental teams are able to align development strategies with the specific challenges and needs of each project. Every single model offers distinct advantages. Linear approaches bring clarity and structure. Iterative models encourage continuous improvement. And incremental methods allow for quicker delivery of functional components. Lifecycle thinking ensures that systems are not only built efficiently but are also designed with long-term sustainability in mind. This perspective becomes increasingly important as technologies improve, evolve and user demands grow more complex and sophisticated. By incorporating lifecycle principles this promotes adaptability, system resilience, and user relevance. Additionally, it encourages proactive system scalability and smoother integration of emerging technologies. In an age of rapid digital transformation, adopting a comprehensive life cycle-oriented approach enables organizations to stay competitive and deliver lasting value through their digital solutions. Systems Device Life Cycle supports both immediate project success and the enduring effectiveness of the systems it helps and hopes to shape.To summarize in a comprehensive manner, the Systems Device Life Cycle serves as a foundational framework within software development. When one takes the time to carefully select among iterative, linear, and incremental models based on the nature of the project and the task that they may face, development teams can manage complexity, reduce risk, improve planning, and support the long-term success and sustainability of digital systems. As technologies and user needs continue to grow, the importance of lifecycle thinking in system design becomes even more apparent, ensuring that digital solutions remain effective, relevant, and resilient over time. 
+</p>
+            <ul>
+               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
+               <li>Tacos cornhole humblebrag ethical.</li>
+               <li>DSA santo big mood organic charcoal bitters.</li>
+               <li>Hot chicken pitchfork poutine.</li>
+            </ul>
+            <h3>Mlkshk Stumptown Hot Chicken</h3>
+            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <footer class="article-footer">
+                <h3>Sources:</h3>
+                <ol>
+                   <p><strong>Reference:</strong><br>
+Scaled Agile, Inc. (n.d.). <em>Enterprise Solution Delivery</em>. Scaled Agile Framework. Retrieved April 17, 2025, from 
+<a href="https://framework.scaledagile.com/enterprise-solution-delivery/" target="_blank" rel="noopener noreferrer">
+https://framework.scaledagile.com/enterprise-solution-delivery/
+</a>
+</p>
+<p><strong>Reference:</strong><br>
+Scaled Agile, Inc. (n.d.). <em>Model-Based Systems Engineering</em>. Scaled Agile Framework. Retrieved April 17, 2025, from 
+<a href="https://framework.scaledagile.com/Model-Based-Systems-Engineering/" target="_blank" rel="noopener noreferrer">
+https://framework.scaledagile.com/Model-Based-Systems-Engineering/
+</a>
+</p>
+<p><strong>Reference:</strong><br>
+Yablonski, Jon. <em>Laws of UX</em>. Available from: 
+<a href="https://www.murphysbookshelf.com" target="_blank" rel="noopener noreferrer">www.murphysbookshelf.com</a>, (2nd Edition). O'Reilly Media, Inc., 2024.
+</p>
+<ul>
+  <li>
+    <a href="https://ellow.io/advantages-and-disadvantages-of-sdlc/" target="_blank">
+      Ellow.io. (2023). <em>Advantages and disadvantages of SDLC models</em>.
+    </a>
+  </li>
+  <li>
+    <a href="https://www.guru99.com/what-is-incremental-model-in-sdlc-advantages-disadvantages.html" target="_blank">
+      Guru99. (2023). <em>What is Incremental Model in SDLC? Advantages & Disadvantages</em>.
+    </a>
+  </li>
+  <li>
+    <a href="https://en.wikipedia.org/wiki/Waterfall_model" target="_blank">
+      Wikipedia. (2024). <em>Waterfall model</em>.
+    </a>
+  </li>
+</ul>
+
+
+
+
+
+                    </ol>
+            </footer>
+         </article>
+
 
          <!-- Module 2.1 Blog Post Starts here -->
 
